config rewrite and bugfixes
* switch from cloth to fzzy config

* fix entity breaking so it drops the right item

* fix new painting from URL on windows